--- a/Develop/index.html
+++ b/Develop/index.html
@@ -30,7 +30,7 @@
    
     <!--This section holds the Search Engine Optimization, Online Reputation Management, Social Media Marketing-->
     <section class="content">
-        <div class="search-engine-optimization">
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="cup of coffee, computer, SEO notepad and pens" ></img>
             <h2>Search Engine Optimization</h2>
             <p>
@@ -38,7 +38,7 @@
             </p>
         </div>
        
-        <div class="online-reputation-management">
+        <div id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="someone using a moblie device and computer with a reputation chart shown on screen" ></img>
             <h2>Online Reputation Management</h2>
             <p>
@@ -46,7 +46,7 @@
             </p>
         </div>
        
-        <div class="social-media-marketing">
+        <div id="social-media-marketing" class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="people sitting around a table in a office meeting discussing different social media ideas" ></img>
             <h2>Social Media Marketing</h2>
             <p>
